sumo/tests/sumo/errors/network/junction/root__junction#type__empty1/errors.sumo
Error: Attribute 'type' in definition of junction '1' is empty.
Quitting (on error).
